Comments added - 06-11-2024